--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .sr-icons {
     color: rgb(41, 47, 109);
 }
@@ -61,6 +60,7 @@
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
         font-size: 16px;
     }
+
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
         font-size: 22px;
     }
@@ -82,7 +82,9 @@ section {
     padding: 8rem 0;
 }
 
-h1,h2,h3{
+h1,
+h2,
+h3 {
     color: rgb(41, 47, 109);
 }
 
@@ -166,6 +168,7 @@ section.masthead p {
         padding-top: 0;
         padding-bottom: 0;
     }
+
     section.masthead h1 {
         font-size: 3rem;
     }
@@ -302,7 +305,7 @@ h1 {
 .btn-primary:focus,
 .btn-primary:active {
     color: #fff;
-    background-color: rgba(188, 199, 39, 0.808)!important;
+    background-color: rgba(188, 199, 39, 0.808) !important;
 }
 
 .btn-primary:active,
@@ -342,39 +345,49 @@ h1 {
         border-color: transparent;
         background-color: transparent;
     }
+
     #mainNav .navbar-brand {
         color: rgba(255, 255, 255, 0.7);
     }
+
     #mainNav .navbar-brand:focus,
     #mainNav .navbar-brand:hover {
         color: #fff;
     }
+
     #mainNav .navbar-nav>li.nav-item>a.nav-link {
         padding: 0.5rem 1rem;
     }
+
     #mainNav .navbar-nav>li.nav-item>a.nav-link,
     #mainNav .navbar-nav>li.nav-item>a.nav-link:focus {
         color: rgba(255, 255, 255, 0.7);
     }
+
     #mainNav .navbar-nav>li.nav-item>a.nav-link:hover,
     #mainNav .navbar-nav>li.nav-item>a.nav-link:focus:hover {
         color: #fff;
     }
+
     #mainNav.navbar-shrink {
         border-bottom: 1px solid rgba(33, 37, 41, 0.1);
         background-color: #fff;
     }
+
     #mainNav.navbar-shrink .navbar-brand {
         color: #F05F40;
     }
+
     #mainNav.navbar-shrink .navbar-brand:focus,
     #mainNav.navbar-shrink .navbar-brand:hover {
         color: #f05f40;
     }
+
     #mainNav.navbar-shrink .navbar-nav>li.nav-item>a.nav-link,
     #mainNav.navbar-shrink .navbar-nav>li.nav-item>a.nav-link:focus {
         color: #212529;
     }
+
     #mainNav.navbar-shrink .navbar-nav>li.nav-item>a.nav-link:hover,
     #mainNav.navbar-shrink .navbar-nav>li.nav-item>a.nav-link:focus:hover {
         color: #F05F40;
