--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ html {
     margin: 0 auto;
 }
 
+.img-cover {
+    min-width: 100%;
+}
+
 .portfolio-box .portfolio-box-caption {
     position: absolute;
     bottom: 0;
